--- a/src/Extension/RemoteDebuggerLauncher.UI/RemoteDebuggerLauncherUI.csproj
+++ b/src/Extension/RemoteDebuggerLauncher.UI/RemoteDebuggerLauncherUI.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9BB8C19C-9BD2-4F3F-8800-951B4851E794}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>RemoteDebuggerLauncher</RootNamespace>
-    <AssemblyName>RemoteDebuggerLauncher.UI</AssemblyName>
+    <AssemblyName>RemoteDebuggerLauncherUI</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
