--- a/src/Extension/RemoteDebuggerLauncherShared/RemoteDebuggerLauncherShared.csproj
+++ b/src/Extension/RemoteDebuggerLauncherShared/RemoteDebuggerLauncherShared.csproj
@@ -41,7 +41,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
@@ -58,6 +57,11 @@
     <None Include="..\..\SigningKey.snk">
       <Link>SigningKey.snk</Link>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp">
+      <Version>4.7.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
