--- a/src/Extension/RemoteDebuggerLauncher.UI/RemoteDebuggerLauncherUI.csproj
+++ b/src/Extension/RemoteDebuggerLauncher.UI/RemoteDebuggerLauncherUI.csproj
@@ -53,7 +53,6 @@
     <Reference Include="System.Transactions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -105,9 +104,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.SDK">
-      <Version>17.1.32210.191</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.1.32210.191" ExcludeAssets="runtime"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\SigningKey.snk">
