removed password and Putty support

--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -67,17 +67,15 @@
     <Compile Include="Extensions\IVsOutputWindowPaneExtensions.cs" />
     <Compile Include="Extensions\VsInteropExtensions.cs" />
     <Compile Include="Extensions\AsyncServiceProviderExtensions.cs" />
+    <Compile Include="Infrastructure\ProtectedDataHelper.cs" />
     <Compile Include="LaunchProfile\AdapterLaunchConfiguration.cs" />
     <Compile Include="Services\PowerShellHost\CaptureOutputPSHostUserInterface.cs" />
     <Compile Include="Services\PowerShellHost\ConsoleRawUserInterface.cs" />
     <Compile Include="Services\PowerShellHost\CaptureOutputPSHost.cs" />
     <Compile Include="Services\IStatusbarService.cs" />
     <Compile Include="Services\StatusbarService.cs" />
-    <Compile Include="Shared\AdapterProviderKind.cs" />
-    <Compile Include="Shared\AuthenticationKind.cs" />
     <Compile Include="Commands\InstallDebuggerCommand.cs" />
     <Compile Include="Commands\InstallDotnetCommand.cs" />
-    <Compile Include="LaunchProfile\PasswordPropertyValueProvider.cs" />
     <Compile Include="Services\SecureShellSessionCommanding.cs" />
     <Compile Include="Services\ILoggerService.cs" />
     <Compile Include="Services\IOptionsPageAccessor.cs" />
