added reusable workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-name: CI
+name: Release
 on: [push]
 
 jobs:
   build:
-    name: CI Build
+    name: Release Build
     uses: ./.github/workflows/shared-build.yml
     
