--- a/.github/workflows/shared-build.yml
+++ b/.github/workflows/shared-build.yml
@@ -3,6 +3,11 @@ name: Build
 on:
   workflow_call:
     inputs:
+      store-artifacts:
+        description: 'Flag if artifacts sould be stored'
+        type: boolean
+        required: true
+        default: false
       configuration:
         description: 'The Visual Studio Configuration to build'
         type: string
@@ -13,11 +18,7 @@ on:
         type: string
         required: false
         default: 'RemoteDebuggerLauncherExtension.sln'
-      store-artifacts:
-        description: 'Flag if artifacts sould be stored'
-        type: boolean
-        required: true
-        default: false
+
 
 jobs:
   shared_build:
@@ -25,7 +26,9 @@ jobs:
     runs-on: windows-2022
 
     env:
-      AssemblyInfoFile: ${{ github.workspace }}\src\Extension\GlobalAssemblyInfo.cs
+      ExtensionAssemblyInfoFile: ${{ github.workspace }}\src\Extension\GlobalAssemblyInfo.cs
+      ExtensionManifestFile: ${{ github.workspace }}\src\Extension\RemoteDebuggerLauncher\source.extension.vsixmanifest
+      ExtensionOutputPath: ${{ github.workspace }}\src\Extension\RemoteDebuggerLauncher\bin\${{ inputs.configuration }}
       ScriptPath: ${{ github.workspace }}\eng\scripts
 
     steps:
@@ -36,21 +39,28 @@ jobs:
 
     # setup MSBUILD and VS
     - name: Add MSBUILD to PATH
+      id: msbuild
       uses: microsoft/setup-msbuild@v1.1
       with:
         vs-version: '[17.2,17.5)'
         msbuild-architecture: x64
+
+    - run: echo ${{ steps.msbuild.outputs.msbuildPath }}
 
     # Build Solution: determine and apply the version for the assemblies and VSIX package
     - name: 'Build Solution: Determine Version'
       id: git-version
       uses: ./eng/actions/git-version
 
-    - name: 'Build Solution: Apply version'
-      run:  ${{ env.ScriptPath }}\AssemblyInfoFileSetVersion.ps1 -SourceFilePath  ${{ env.AssemblyInfoFile }}
+    - name: 'Build Solution: Apply assembly version'
+      run:  ${{ env.ScriptPath }}\AssemblyInfoFileSetVersion.ps1 -SourceFilePath  ${{ env.ExtensionAssemblyInfoFile }}
         -VersionPrefix ${{ steps.git-version.outputs.versionPrefix }}
         -VersionSuffix ${{ steps.git-version.outputs.versionSuffix }}
         -VersionBuild ${{ steps.git-version.outputs.versionBuild }}
+      shell: pwsh
+
+    - name: 'Build Solution: Apply VSIX version'
+      run:  ${{ env.ScriptPath }}\VsixManifestFileSetVersion.ps1 -SourceFilePath  ${{ env.ExtensionManifestFile }} -VersionPrefix ${{ steps.git-version.outputs.versionPrefix }}
       shell: pwsh
 
     # Build Solution: restore NuGet Packages
@@ -64,3 +74,19 @@ jobs:
       id: build
       run: msbuild ${{ inputs.solution-path }} /t:Rebuild /p:Configuration=${{ inputs.configuration }}
       shell: pwsh
+
+    - name: 'Store Artifacts: VSIX'
+      uses: actions/upload-artifact@v3
+      if: ${{ inputs.store-artifacts }}
+      with:
+        name: vsix
+        path: ${{ env.ExtensionOutputPath }}\*.vsix
+
+    - name: 'Store Artifacts: Binaries'
+      uses: actions/upload-artifact@v3
+      if: ${{ inputs.store-artifacts }}
+      with:
+        name: binaries
+        path: |
+          ${{ env.ExtensionOutputPath }}
+          !${{ env.ExtensionOutputPath }}\*.vsix
