--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
     name: GitHub Release
     runs-on: ubuntu-latest
     needs: build
+    if: ${{ github.ref_type == 'tag' }}
 
     steps:
     - name: Dummy
@@ -27,6 +28,7 @@ jobs:
     name: VS Marketplace Release
     runs-on: windows-2022
     needs: build
+    if: ${{ github.ref_type == 'tag' }}
 
     steps:
     - name: Dummy
