--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -71,13 +71,15 @@
     </Compile>
     <Compile Include="Commands\LaunchProfileAccess.cs" />
     <Compile Include="Commands\CleanOutputCommand.cs" />
-    <Compile Include="ProjectSystem\LaunchProfile\SecureShellRemoteLaunchEnvironmentVariableEncoding.cs" />
+    <Compile Include="Services\Implementation\PublishService.cs" />
     <Compile Include="Services\Implementation\IVsOutputWindowPaneExtensions.cs" />
     <Compile Include="Extensions\VsInteropExtensions.cs" />
     <Compile Include="Extensions\AsyncServiceProviderExtensions.cs" />
     <Compile Include="Infrastructure\ProtectedDataHelper.cs" />
     <Compile Include="ProjectSystem\LaunchProfile\AdapterLaunchConfiguration.cs" />
+    <Compile Include="Services\Interface\Publish.cs" />
     <Compile Include="Services\Interface\ConfigurationAggregator.cs" />
+    <Compile Include="Services\Interface\IPublishService.cs" />
     <Compile Include="Services\Interface\ISecureShellSessionService.cs" />
     <Compile Include="Services\Interface\SecureShellRemoteOperations.cs" />
     <Compile Include="Services\Interface\SecureShellSession.cs" />
