--- a/.github/workflows/admin-cleanup-manual.yml
+++ b/.github/workflows/admin-cleanup-manual.yml
@@ -1,4 +1,4 @@
-name: Scheduled workflow run cleanup
+name: 'Admin: Scheduled workflow run cleanup'
 on:
   schedule:
     - cron: '0 0 1 * *'
@@ -6,6 +6,7 @@ on:
 
 jobs:
   del_runs:
+    name: Delete Runs
     runs-on: ubuntu-latest
     steps:
       - name: Delete CI workflow runs
