added publish profiles

--- a/samples/UnoGuiApp/UnoGuiApp.Windows/UnoGuiApp.Windows.csproj
+++ b/samples/UnoGuiApp/UnoGuiApp.Windows/UnoGuiApp.Windows.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
@@ -35,7 +35,7 @@
        Tools extension to be activated for this project even if the Windows App SDK Nuget
        package has not yet been restored -->
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
-		<ProjectCapability Include="Msix"/>
+		<ProjectCapability Include="Msix" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -50,6 +50,10 @@
 		-->
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22000.25" />
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22000.25" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Properties\Properties\" />
 	</ItemGroup>
 	
 	<Import Project="..\UnoGuiApp.Shared\UnoGuiApp.Shared.projitems" Label="Shared" />
