--- a/.gitignore
+++ b/.gitignore
@@ -174,7 +174,7 @@ publish/
 *.azurePubxml
 # Note: Comment the next line if you want to checkin your web deploy settings,
 # but database connection strings (with potential passwords) will be unencrypted
-*.pubxml
+# *.pubxml
 *.publishproj
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
@@ -351,3 +351,4 @@ MigrationBackup/
 
 # Assitional folders to exclude
 /samples/AspNetSpa/ClientApp/.angular/
+/samples/AspNetSpa/.config
