--- a/.github/workflows/project-release.yml
+++ b/.github/workflows/project-release.yml
@@ -22,11 +22,33 @@ jobs:
     name: GitHub Release
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      contents: write
     if: ${{ github.ref_type == 'tag' }}
 
+    env:
+      GitHubReleaseBodyFile: ${{ github.workspace }}/src/ReleaseNotes.md
+
     steps:
-    - name: Dummy
-      run: echo TODO
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Download artifacts
+      id: download
+      uses: actions/download-artifact@v3
+      with:
+        name: vsix
+
+#     - run: echo ${{steps.download.outputs.download-path}}
+#     - name: Display structure of downloaded files
+#       run: ls -R
+
+    - name: Create Release
+      uses: ncipollo/release-action@v1
+      with:
+         artifacts: '${{steps.download.outputs.download-path}}/RemoteDebuggerLauncher.vsix'
+         bodyFile: ${{ env.GitHubReleaseBodyFile }}
+
 
   marketplace-release:
     name: VS Marketplace Release
@@ -35,5 +57,5 @@ jobs:
     if: ${{ github.ref_type == 'tag' }}
 
     steps:
-    - name: Dummy
+    - name: TODO
       run: echo TODO
