--- a/.editorconfig
+++ b/.editorconfig
@@ -15,63 +15,6 @@ tab_width = 3
 end_of_line = crlf
 insert_final_newline = false
 
-#### .NET Coding Conventions ####
-
-# Organize usings
-dotnet_separate_import_directive_groups = false
-dotnet_sort_system_directives_first = true
-file_header_template = unset
-
-# this. and Me. preferences
-dotnet_style_qualification_for_event = false
-dotnet_style_qualification_for_field = false
-dotnet_style_qualification_for_method = false
-dotnet_style_qualification_for_property = false
-
-# Language keywords vs BCL types preferences
-dotnet_style_predefined_type_for_locals_parameters_members = true
-dotnet_style_predefined_type_for_member_access = true
-
-# Parentheses preferences
-dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity
-dotnet_style_parentheses_in_other_binary_operators = always_for_clarity
-dotnet_style_parentheses_in_other_operators = never_if_unnecessary
-dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity
-
-# Modifier preferences
-dotnet_style_require_accessibility_modifiers = for_non_interface_members
-
-# Expression-level preferences
-dotnet_style_coalesce_expression = true
-dotnet_style_collection_initializer = true
-dotnet_style_explicit_tuple_names = true
-dotnet_style_namespace_match_folder = true
-dotnet_style_null_propagation = true
-dotnet_style_object_initializer = true
-dotnet_style_operator_placement_when_wrapping = beginning_of_line
-dotnet_style_prefer_auto_properties = true
-dotnet_style_prefer_compound_assignment = true
-dotnet_style_prefer_conditional_expression_over_assignment = true
-dotnet_style_prefer_conditional_expression_over_return = true
-dotnet_style_prefer_inferred_anonymous_type_member_names = true
-dotnet_style_prefer_inferred_tuple_names = true
-dotnet_style_prefer_is_null_check_over_reference_equality_method = true
-dotnet_style_prefer_simplified_boolean_expressions = true
-dotnet_style_prefer_simplified_interpolation = true
-
-# Field preferences
-dotnet_style_readonly_field = true
-
-# Parameter preferences
-dotnet_code_quality_unused_parameters = all
-
-# Suppression preferences
-dotnet_remove_unnecessary_suppression_exclusions = none
-
-# New line preferences
-dotnet_style_allow_multiple_blank_lines_experimental = true
-dotnet_style_allow_statement_immediately_after_block_experimental = true
-
 #### C# Coding Conventions ####
 
 # var preferences
@@ -103,11 +46,14 @@ csharp_style_conditional_delegate_call = true:suggestion
 # Modifier preferences
 csharp_prefer_static_local_function = true:suggestion
 csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async
+csharp_style_prefer_readonly_struct = true:suggestion
 
 # Code-block preferences
-csharp_prefer_braces = true:silent
+csharp_prefer_braces = true:suggestion
 csharp_prefer_simple_using_statement = true:suggestion
-csharp_style_namespace_declarations = file_scoped:silent
+csharp_style_namespace_declarations = block_scoped:silent
+csharp_style_prefer_method_group_conversion = true:silent
+csharp_style_prefer_top_level_statements = false:silent
 
 # Expression-level preferences
 csharp_prefer_simple_default_expression = true:suggestion
@@ -119,12 +65,13 @@ csharp_style_prefer_local_over_anonymous_function = true:suggestion
 csharp_style_prefer_null_check_over_type_check = true:suggestion
 csharp_style_prefer_range_operator = true:suggestion
 csharp_style_prefer_tuple_swap = true:suggestion
+csharp_style_prefer_utf8_string_literals = true:suggestion
 csharp_style_throw_expression = true:suggestion
 csharp_style_unused_value_assignment_preference = discard_variable:suggestion
-csharp_style_unused_value_expression_statement_preference = discard_variable:silent
+csharp_style_unused_value_expression_statement_preference = discard_variable:suggestion
 
 # 'using' directive preferences
-csharp_using_directive_placement = outside_namespace:silent
+csharp_using_directive_placement = outside_namespace:error
 
 # New line preferences
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:silent
@@ -194,6 +141,22 @@ dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
 dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
+dotnet_naming_rule.constants_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.constants_should_be_pascal_case.symbols = constants
+dotnet_naming_rule.constants_should_be_pascal_case.style = pascal_case
+
+dotnet_naming_rule.non_private_static_fields_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.non_private_static_fields_should_be_pascal_case.symbols = non_private_static_fields
+dotnet_naming_rule.non_private_static_fields_should_be_pascal_case.style = pascal_case
+
+dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.symbols = non_private_readonly_fields
+dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.style = pascal_case
+
+dotnet_naming_rule.instance_fields_should_be_camel_case.severity = suggestion
+dotnet_naming_rule.instance_fields_should_be_camel_case.symbols = private_fields
+dotnet_naming_rule.instance_fields_should_be_camel_case.style = camel_case
+
 # Symbol specifications
 
 dotnet_naming_symbols.interface.applicable_kinds = interface
@@ -208,6 +171,20 @@ dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, meth
 dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
 dotnet_naming_symbols.non_field_members.required_modifiers = 
 
+dotnet_naming_symbols.constants.applicable_kinds = field, local
+dotnet_naming_symbols.constants.required_modifiers = const
+
+dotnet_naming_symbols.non_private_static_fields.applicable_kinds = field
+dotnet_naming_symbols.non_private_static_fields.applicable_accessibilities = public, protected, internal, protected_internal, private_protected
+dotnet_naming_symbols.non_private_static_fields.required_modifiers = static
+
+dotnet_naming_symbols.non_private_readonly_fields.applicable_kinds = field
+dotnet_naming_symbols.non_private_readonly_fields.applicable_accessibilities = public, protected, internal, protected_internal, private_protected
+dotnet_naming_symbols.non_private_readonly_fields.required_modifiers = readonly
+
+dotnet_naming_symbols.private_fields.applicable_kinds = field
+dotnet_naming_symbols.private_fields.applicable_accessibilities = private
+
 # Naming styles
 
 dotnet_naming_style.pascal_case.required_prefix = 
@@ -220,50 +197,10 @@ dotnet_naming_style.begins_with_i.required_suffix =
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
-
-csharp_style_prefer_method_group_conversion = true:silent
-csharp_style_prefer_top_level_statements = true:silent
-csharp_style_prefer_utf8_string_literals = true:suggestion
-csharp_style_prefer_readonly_struct = true:suggestion
-dotnet_diagnostic.RS0030.severity = warning
-dotnet_diagnostic.RS0031.severity = warning
-dotnet_diagnostic.RS0035.severity = error
-dotnet_diagnostic.RS1023.severity = warning
-dotnet_diagnostic.RS1002.severity = warning
-dotnet_diagnostic.RS1003.severity = warning
-dotnet_diagnostic.RS1005.severity = warning
-dotnet_diagnostic.RS1006.severity = warning
-dotnet_diagnostic.RS1022.severity = warning
-dotnet_diagnostic.RS1008.severity = warning
-dotnet_diagnostic.RS1012.severity = warning
-dotnet_diagnostic.RS1013.severity = warning
-dotnet_diagnostic.VSSDK001.severity = warning
-dotnet_diagnostic.VSSDK002.severity = error
-dotnet_diagnostic.VSSDK003.severity = suggestion
-dotnet_diagnostic.VSSDK004.severity = warning
-dotnet_diagnostic.VSTHRD001.severity = warning
-dotnet_diagnostic.VSTHRD002.severity = warning
-dotnet_diagnostic.VSTHRD003.severity = warning
-dotnet_diagnostic.VSTHRD004.severity = error
-dotnet_diagnostic.VSTHRD010.severity = warning
-dotnet_diagnostic.VSTHRD011.severity = error
-dotnet_diagnostic.VSTHRD012.severity = warning
-dotnet_diagnostic.VSTHRD102.severity = suggestion
-dotnet_diagnostic.VSTHRD103.severity = warning
-dotnet_diagnostic.VSTHRD104.severity = suggestion
-dotnet_diagnostic.VSTHRD105.severity = warning
-dotnet_diagnostic.VSTHRD107.severity = error
-dotnet_diagnostic.VSTHRD108.severity = warning
-dotnet_diagnostic.VSTHRD109.severity = error
-dotnet_diagnostic.VSTHRD110.severity = warning
-dotnet_diagnostic.VSTHRD112.severity = suggestion
-dotnet_diagnostic.VSTHRD114.severity = warning
-dotnet_diagnostic.MsgPack003.severity = error
-dotnet_diagnostic.MsgPack004.severity = error
-dotnet_diagnostic.MsgPack005.severity = error
-dotnet_diagnostic.VSSDK005.severity = error
-dotnet_diagnostic.VSSDK006.severity = warning
-
+dotnet_naming_style.camel_case.required_prefix = 
+dotnet_naming_style.camel_case.required_suffix = 
+dotnet_naming_style.camel_case.word_separator = 
+dotnet_naming_style.camel_case.capitalization = camel_case
 
 # XAML files
 [*.xaml]
@@ -272,41 +209,71 @@ indent_style = space
 tab_width = 3
 
 [*.{cs,vb}]
-tab_width = 3
-indent_size = 3
-end_of_line = crlf
-dotnet_style_operator_placement_when_wrapping = beginning_of_line
-dotnet_style_coalesce_expression = true:suggestion
-dotnet_style_null_propagation = true:suggestion
-dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
-dotnet_style_prefer_auto_properties = true:silent
-dotnet_style_object_initializer = true:suggestion
-dotnet_style_collection_initializer = true:suggestion
-dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
-dotnet_style_prefer_conditional_expression_over_assignment = true:silent
-dotnet_style_prefer_conditional_expression_over_return = true:silent
-dotnet_style_explicit_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
-dotnet_style_prefer_compound_assignment = true:suggestion
-dotnet_style_prefer_simplified_interpolation = true:suggestion
-dotnet_style_namespace_match_folder = true:suggestion
-dotnet_diagnostic.CA1051.severity = warning
-dotnet_style_readonly_field = true:suggestion
+
+#### .NET Coding Conventions ####
+file_header_template = ----------------------------------------------------------------------------\n<copyright company="Michael Koster">\n  Copyright (c) Michael Koster. All rights reserved.\n  Licensed under the MIT License.\n</copyright>\n----------------------------------------------------------------------------
+
+# Organize usings
+dotnet_separate_import_directive_groups = false
+dotnet_sort_system_directives_first = true
+
+# this. and Me. preferences
+dotnet_style_qualification_for_field = false:suggestion
+dotnet_style_qualification_for_property = false:suggestion
+dotnet_style_qualification_for_method = false:suggestion
+dotnet_style_qualification_for_event = false:suggestion
+
+# Language keywords vs BCL types preferences
 dotnet_style_predefined_type_for_locals_parameters_members = true:silent
-dotnet_style_predefined_type_for_member_access = true:silent
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
-dotnet_style_allow_multiple_blank_lines_experimental = true:silent
-dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
-dotnet_code_quality_unused_parameters = all:suggestion
+dotnet_style_predefined_type_for_member_access = true:suggestion
+
+# Parentheses preferences
 dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:silent
 dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:silent
-dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:silent
 dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent
-dotnet_style_qualification_for_field = false:silent
-dotnet_style_qualification_for_property = false:silent
-dotnet_style_qualification_for_method = false:silent
-dotnet_style_qualification_for_event = false:silent
+dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:silent
+
+# Modifier preferences
+dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
+
+# Expression-level preferences
+dotnet_style_coalesce_expression = true:suggestion
+dotnet_style_collection_initializer = true:suggestion
+dotnet_style_explicit_tuple_names = true:suggestion
+dotnet_style_namespace_match_folder = true:suggestion
+dotnet_style_null_propagation = true:suggestion
+dotnet_style_object_initializer = true:suggestion
+dotnet_style_operator_placement_when_wrapping = beginning_of_line
+dotnet_style_prefer_auto_properties = true:silent
+dotnet_style_prefer_compound_assignment = true:suggestion
+dotnet_style_prefer_conditional_expression_over_assignment = true:silent
+dotnet_style_prefer_conditional_expression_over_return = true:silent
+dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
+dotnet_style_prefer_inferred_tuple_names = true:suggestion
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
+dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
+dotnet_style_prefer_simplified_interpolation = true:suggestion
+
+# Field preferences
+dotnet_style_readonly_field = true:suggestion
+
+# Parameter preferences
+dotnet_code_quality_unused_parameters = all:suggestion
+
+# Suppression preferences
+dotnet_remove_unnecessary_suppression_exclusions = none
+
+# New line preferences
+dotnet_style_allow_multiple_blank_lines_experimental = true:silent
+dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
+
+# Code style analyzer
+dotnet_diagnostic.IDE0003.severity = suggestion
+dotnet_diagnostic.IDE0009.severity = none
+dotnet_diagnostic.IDE0049.severity = suggestion
+dotnet_diagnostic.IDE0160.severity = warning
+dotnet_diagnostic.IDE0161.severity = none
+dotnet_diagnostic.IDE0073.severity = error
 
 # Analyzer Settings
 # CA1000: Do not declare static members on generic types
@@ -403,6 +370,8 @@ dotnet_diagnostic.CA1047.severity = suggestion
 dotnet_diagnostic.CA1050.severity = suggestion
 
 # CA1051: Do not declare visible instance fields
+dotnet_diagnostic.CA1051.severity = warning
+
 # CA1052: Static holder types should be Static or NotInheritable
 dotnet_diagnostic.CA1052.severity = warning
 
@@ -715,7 +684,7 @@ dotnet_diagnostic.CA2000.severity = warning
 dotnet_diagnostic.CA2002.severity = warning
 
 # CA2007: Do not directly await a Task
-dotnet_diagnostic.CA2007.severity = warning
+dotnet_diagnostic.CA2007.severity = silent
 
 # CA2008: Do not create tasks without passing a TaskScheduler
 dotnet_diagnostic.CA2008.severity = warning
@@ -1160,11 +1129,22 @@ dotnet_diagnostic.CA5404.severity = warning
 # CA5405: Do not always skip token validation in delegates
 dotnet_diagnostic.CA5405.severity = warning
 
+# Roslyn Alanyzers
+dotnet_diagnostic.RS0030.severity = warning
+dotnet_diagnostic.RS0031.severity = warning
+dotnet_diagnostic.RS0035.severity = error
 dotnet_diagnostic.RS1001.severity = warning
+dotnet_diagnostic.RS1002.severity = warning
+dotnet_diagnostic.RS1003.severity = warning
 dotnet_diagnostic.RS1004.severity = warning
+dotnet_diagnostic.RS1005.severity = warning
+dotnet_diagnostic.RS1006.severity = warning
+dotnet_diagnostic.RS1008.severity = warning
 dotnet_diagnostic.RS1009.severity = error
 dotnet_diagnostic.RS1010.severity = warning
 dotnet_diagnostic.RS1011.severity = warning
+dotnet_diagnostic.RS1012.severity = warning
+dotnet_diagnostic.RS1013.severity = warning
 dotnet_diagnostic.RS1015.severity = warning
 dotnet_diagnostic.RS1016.severity = warning
 dotnet_diagnostic.RS1017.severity = warning
@@ -1172,6 +1152,8 @@ dotnet_diagnostic.RS1018.severity = warning
 dotnet_diagnostic.RS1019.severity = warning
 dotnet_diagnostic.RS1020.severity = warning
 dotnet_diagnostic.RS1021.severity = warning
+dotnet_diagnostic.RS1022.severity = warning
+dotnet_diagnostic.RS1023.severity = warning
 dotnet_diagnostic.RS1024.severity = warning
 dotnet_diagnostic.RS1025.severity = warning
 dotnet_diagnostic.RS1026.severity = warning
@@ -1194,6 +1176,32 @@ dotnet_diagnostic.RS2006.severity = warning
 dotnet_diagnostic.RS2007.severity = warning
 dotnet_diagnostic.RS2008.severity = warning
 
+dotnet_diagnostic.VSSDK001.severity = warning
+dotnet_diagnostic.VSSDK002.severity = error
+dotnet_diagnostic.VSSDK003.severity = suggestion
+dotnet_diagnostic.VSSDK004.severity = warning
+dotnet_diagnostic.VSSDK005.severity = error
+dotnet_diagnostic.VSSDK006.severity = warning
+dotnet_diagnostic.VSTHRD001.severity = warning
+dotnet_diagnostic.VSTHRD002.severity = warning
+dotnet_diagnostic.VSTHRD003.severity = warning
+dotnet_diagnostic.VSTHRD004.severity = error
+dotnet_diagnostic.VSTHRD010.severity = warning
+dotnet_diagnostic.VSTHRD011.severity = error
+dotnet_diagnostic.VSTHRD012.severity = warning
+dotnet_diagnostic.VSTHRD102.severity = suggestion
+dotnet_diagnostic.VSTHRD103.severity = warning
+dotnet_diagnostic.VSTHRD104.severity = suggestion
+dotnet_diagnostic.VSTHRD105.severity = warning
+dotnet_diagnostic.VSTHRD107.severity = error
+dotnet_diagnostic.VSTHRD108.severity = warning
+dotnet_diagnostic.VSTHRD109.severity = error
+dotnet_diagnostic.VSTHRD110.severity = warning
+dotnet_diagnostic.VSTHRD112.severity = suggestion
+dotnet_diagnostic.VSTHRD114.severity = warning
+dotnet_diagnostic.MsgPack003.severity = error
+dotnet_diagnostic.MsgPack004.severity = error
+dotnet_diagnostic.MsgPack005.severity = error
 dotnet_diagnostic.VSTHRD100.severity = warning
 dotnet_diagnostic.VSTHRD101.severity = warning
 dotnet_diagnostic.VSTHRD106.severity = warning
@@ -1205,4 +1213,24 @@ dotnet_diagnostic.ISB001.severity = error
 dotnet_diagnostic.ISB002.severity = warning
 dotnet_diagnostic.MsgPack001.severity = warning
 dotnet_diagnostic.MsgPack002.severity = warning
+dotnet_style_operator_placement_when_wrapping = beginning_of_line
+tab_width = 3
+indent_size = 3
+end_of_line = crlf
+dotnet_style_coalesce_expression = true:suggestion
+dotnet_style_null_propagation = true:suggestion
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
+dotnet_style_prefer_auto_properties = true:silent
+dotnet_style_object_initializer = true:suggestion
+dotnet_style_collection_initializer = true:suggestion
+dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
+dotnet_style_prefer_conditional_expression_over_assignment = true:silent
+dotnet_style_prefer_conditional_expression_over_return = true:silent
+dotnet_style_explicit_tuple_names = true:suggestion
+dotnet_style_prefer_inferred_tuple_names = true:suggestion
+dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
+dotnet_style_prefer_compound_assignment = true:suggestion
+dotnet_style_prefer_simplified_interpolation = true:suggestion
+dotnet_style_namespace_match_folder = true:suggestion
+indent_style = space
 
