--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -53,7 +53,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>..\Extension.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -69,12 +68,17 @@
     </Compile>
     <Compile Include="Commands\LaunchProfileAccess.cs" />
     <Compile Include="Commands\CleanOutputCommand.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Services\Implementation\PublishService.cs" />
     <Compile Include="Services\Implementation\IVsOutputWindowPaneExtensions.cs" />
     <Compile Include="Extensions\VsInteropExtensions.cs" />
     <Compile Include="Extensions\AsyncServiceProviderExtensions.cs" />
     <Compile Include="Infrastructure\ProtectedDataHelper.cs" />
     <Compile Include="ProjectSystem\LaunchProfile\AdapterLaunchConfiguration.cs" />
+    <Compile Include="Services\Implementation\WaitDialogService.cs" />
+    <Compile Include="Services\Implementation\WaitDialogFactoryService.cs" />
+    <Compile Include="Services\Interface\IWaitDialogService.cs" />
+    <Compile Include="Services\Interface\IWaitDialogFactoryService.cs" />
     <Compile Include="Services\Interface\Publish.cs" />
     <Compile Include="Services\Interface\ConfigurationAggregator.cs" />
     <Compile Include="Services\Interface\IPublishService.cs" />
@@ -82,6 +86,7 @@
     <Compile Include="Services\Interface\SecureShellRemoteOperations.cs" />
     <Compile Include="Services\Interface\SecureShellSession.cs" />
     <Compile Include="Services\Interface\ISecureShellRemoteOperationsService.cs" />
+    <Compile Include="Services\Interface\StatusbarAnimation.cs" />
     <Compile Include="Services\PowerShellHost\CaptureOutputPSHostUserInterface.cs" />
     <Compile Include="Services\PowerShellHost\ConsoleRawUserInterface.cs" />
     <Compile Include="Services\PowerShellHost\CaptureOutputPSHost.cs" />
@@ -115,6 +120,8 @@
     <Compile Include="ProjectSystem\LaunchProfile\SecureShellRemoteLaunchTargetsProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteDebuggerLauncherPackage.cs" />
+    <Compile Include="Commands\OpenToolWindowCommand.cs" />
+    <Compile Include="Commands\SetupSshCommand.cs" />
     <Compile Include="Utilities\ShellUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -147,6 +154,7 @@
     </XamlPropertyRule>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -223,7 +231,6 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
